@@ -3,6 +3,8 @@ Revision history for Geo::Location::Point
 0.13
 	Use gtar to create a distribution on Macs
 	Use Test::DescribeMe to simplify tests
+	More new() testing
+	Added codecov.io support
 
 0.12	Tue Jul  2 21:30:04 EDT 2024
 	Better argument validation
